--- a/hd.html
+++ b/hd.html
@@ -33,7 +33,7 @@ white">
 <center><h1> Started a new journey </h1></center>
 
 <center><button 
-onclick="location.href='content://com.mixplorer.silver.file/525!/html%20learning%20/j.html'" type="button ">
+onclick="location.href='j.html'" type="button ">
 its nothing
 </button>
 </center>
