--- a/hd.html
+++ b/hd.html
@@ -33,7 +33,7 @@ white">
 <center><h1> Started a new journey </h1></center>
 
 <center><button 
-onclick="location.href='j.html'" type="button ">
+onclick="location.href='https://github.com/donotdisturbmenow/newweb/blob/main/j.html'" type="button ">
 its nothing
 </button>
 </center>
