--- a/hd.html
+++ b/hd.html
@@ -65,10 +65,10 @@ its nothing
 
 <input type="button" 
 onclick="inter();
+
 "value="Click here" />
 
-<p > here we go now</p>
 
-<p > here we go now</p>
+<p >finally here we go now</p>
 </body>
 </html>
