--- a/hd.html
+++ b/hd.html
@@ -69,6 +69,6 @@ onclick="inter();
 "value="Click here" />
 
 
-<p >finally here we go now</p>
+<p >finally here we go now</p><p >finally here we go now</p>
 </body>
 </html>
