--- a/hd.html
+++ b/hd.html
@@ -33,7 +33,7 @@ white">
 <center><h1> Started a new journey </h1></center>
 
 <center><button 
-onclick="location.href='https://github.com/donotdisturbmenow/newweb/blob/main/j.html'" type="button ">
+onclick="location.href='https://donotdisturbmenow.github.io/newweb/j.html'" type="button ">
 its nothing
 </button>
 </center>
@@ -57,11 +57,11 @@ its nothing
 "_blank">Opens in New tab</a>
 </div>
 
-<a href="content://com.mixplorer.silver.file/525!/html%20learning%20/img/2.p" >
-<img height="80%" width="100%" src="content://com.mixplorer.silver.file/525!/html%20learning%20/img/1.p"></a>
+<a href="https://donotdisturbmenow.github.io/newweb/1.png" >
+<img height="80%" width="100%" src="https://donotdisturbmenow.github.io/newweb/1.png"></a>
 <p align="center"">align="center" can be use on anywhere</p>
 
-<div style="text-align:center;"> <a href="content://com.mixplorer.silver.file/525!/html%20learning%20/websitelayout.html">website layout</a></div>
+<div style="text-align:center;"> <a href="https://donotdisturbmenow.github.io/newweb/websitelayout.html">website layout</a></div>
 
 <input type="button" 
 onclick="inter();
