--- a/index.html
+++ b/index.html
@@ -38,24 +38,30 @@ font-size: 180%;
 border-radius: 50%;
 
 }
-/* a:link, a:visited {
-  background-color: #f44336;
+a:link, a:visited {
   color: white;
-  padding: 14px 25px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-} */
+}
 
 a:hover, a:active {
-  background-color: rgb(236, 215, 215);
-  border-radius: 50%;
-  background-color: #f44336;
-  color: white;
+  color: rgb(0, 0, 0);
   padding: 14px 25px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
+}
+.t{
+height: 100%;
+width: 20%;
+background-color: aqua;
+}
+#tr{
+height: 10%;
+width: 100%;
+background-color: blue;
+
 }
 
 </style>
@@ -80,7 +86,17 @@ a:hover, a:active {
       <td class="n"><a href="blog.html">blog</a>  </td>
       <td class="n"><a href="contact us.html">contact us</a>  </td>
 
-    </tr>
+</tr>
+</table>
+<table
+
+<tr id="tr">
+  <td class="t">hhhhhhh </td>
+  <td class="t"> hhhhhhh</td>    
+    <td class="t"> hhhhhhh</td>  
+        <td class="t"> hhhhhhh</td>
+              <td class="t">hhhhhhh </td>
+</tr>
 </table>
 
 
