--- a/index.html
+++ b/index.html
@@ -4,65 +4,13 @@
 <title > this is my first webpage </title>
 
 <style>
-#head
-{
-height: 30%;
-width: 100%;
-background-color: rgb(238, 69, 2);
-
-}
-#td1 {
-
-    
-    text-align: center;
-    vertical-align: middle;
-    padding-top: 45px;
-    padding-left: 90px;
-    font-size: 70px;
-    font-weight: bold;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    color: rgb(255, 255, 255);
-
-
-}
-.n {
+#a {
+font-size: 20px;
 font-weight: bold;
-color: rgb(255, 255, 255);
-align-content: center;
-align-items: center;
-padding-right: 7px;
-padding-top: 50px;
-text-align: center;
-padding-left: 25px ;
-font-size: 180%;
-border-radius: 50%;
+color:white;
 
 }
-a:link, a:visited {
-  color: white;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-}
 
-a:hover, a:active {
-  color: rgb(0, 0, 0);
-  padding: 14px 25px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-}
-.t{
-height: 100%;
-width: 20%;
-background-color: aqua;
-}
-#tr{
-height: 10%;
-width: 100%;
-background-color: blue;
-
-}
 
 </style>
 
@@ -73,34 +21,27 @@ background-color: blue;
 </script> 
 </head>
 
-<body style="background-color: rgb(255, 255, 255);" >
+<body style="background-color: #7F7F7F;" >
+<div style="height:10%; width: 100%;">
+  <table style="height:100%; width: 100%;">
+<tr >
 
-<div id="head">
-<table>
+<td style=" font-weight: bold; height:100%; width: 20%; font-size: 40px; text-align: center; padding-bottom: 1%;color: rgb(255, 153, 0);">Praroz</td>
 
-    <tr>
-      <td id="td1" style="vertical-align: center;"> Hello </td>
-      <td style="padding-left: 140px ;" class="n"> <a href="home.html">Home</a> </td>
-      <td class="n"><a href="about.html">about</a>  </td>
-      <td class="n"><a href="service.html">servic</a>  </td>
-      <td class="n"><a href="blog.html">blog</a>  </td>
-      <td class="n"><a href="contact us.html">contact us</a>  </td>
+<td id="a" style="height:100%; width: 10%;">Home</td>
+<td id="a" style="height:100%; width: 10%;">About</td>
+<td id="a" style="height:100%; width: 10%;">Service</td>
+<td id="a" style="height:100%; width: 10%;">design</td>
+<td id="a" style="height:100%; width: 10%;">Contact</td>
+
+<td style="height:100%; width: 30%;"> <input class="srch" type="search" name="" placeholder="Type To text">
+  <a href="#"> <button class="btn">Search</button></a></td>
 
 </tr>
-</table>
-<table
 
-<tr id="tr">
-  <td class="t">hhhhhhh </td>
-  <td class="t"> hhhhhhh</td>    
-    <td class="t"> hhhhhhh</td>  
-        <td class="t"> hhhhhhh</td>
-              <td class="t">hhhhhhh </td>
-</tr>
-</table>
-
-
+  </table>
 </div>
+
 
 </body>
 
