--- a/index.html
+++ b/index.html
@@ -12,6 +12,64 @@ color:white;
 }
 
 
+.srch{
+height:53%;
+width: 60%;
+background: transparent;
+border-color: #FF7200;
+border-radius: 5px;
+padding-left: 10%;
+}
+
+.btn{
+
+height:53%;
+width : 25%;
+color:white;
+font-size:15px;
+border-radius: 5px;
+background: #FF7200;
+border-color: #FF7200;
+
+}
+.btn:hover{
+    color: #000;
+}
+
+.btn:focus{
+    outline: none;
+}
+
+.srch:focus{
+    outline: none;
+}
+.h1 {
+font-size: 80px;
+color: #FF7200;
+padding-left: 5%;
+}
+.h2 {
+font-size: 21px;
+line-break: 3px;
+color: #ffffff;
+padding-left: 5%;
+}
+
+.btn2{
+
+height:10%;
+width : 25%;
+color:white;
+font-size:15px;
+margin-left: 5%;
+border-radius: 5px;
+background: #FF7200;
+border-color: #FF7200;
+
+}
+
+
+
 </style>
 
 <script> 
@@ -26,7 +84,7 @@ color:white;
   <table style="height:100%; width: 100%;">
 <tr >
 
-<td style=" font-weight: bold; height:100%; width: 20%; font-size: 40px; text-align: center; padding-bottom: 1%;color: rgb(255, 153, 0);">Praroz</td>
+<td style=" font-weight: bold; height:100%; width: 20%; font-size: 40px; text-align: center; padding-bottom: 1%;color: #FF7200;">Praroz</td>
 
 <td id="a" style="height:100%; width: 10%;">Home</td>
 <td id="a" style="height:100%; width: 10%;">About</td>
@@ -34,12 +92,30 @@ color:white;
 <td id="a" style="height:100%; width: 10%;">design</td>
 <td id="a" style="height:100%; width: 10%;">Contact</td>
 
-<td style="height:100%; width: 30%;"> <input class="srch" type="search" name="" placeholder="Type To text">
-  <a href="#"> <button class="btn">Search</button></a></td>
+<td style="height:100%; width: 30%;"> 
+
+  <input class="srch" type="search"  placeholder="Type To text">
+  <a href="#">    <button class="btn">Search</button>    </a>
+
+</td>
 
 </tr>
-
+ 
   </table>
+</div>
+
+<div style="height:60%; width:60%; float: left;">
+<p class="h1"> Web Design & Development  Course </p>
+<p class="h2"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt neque expedita atque eveniet
+  quis nesciunt. Quos nulla vero consequuntur, fugit nemo ad delectus
+  a quae totam ipsa illum minus laudantium? </p>
+  <button class="btn2">Join Us</button>
+
+</div>
+<div style="height:60%; width:10%; float:right;"></div>
+
+<div style="height:60%; width:30%; float:right;">
+
 </div>
 
 
