--- a/index.html
+++ b/index.html
@@ -60,14 +60,32 @@ padding-left: 5%;
 height:10%;
 width : 25%;
 color:white;
-font-size:15px;
+font-size:18px;
 margin-left: 5%;
 border-radius: 5px;
 background: #FF7200;
 border-color: #FF7200;
 
 }
+.loginpage{
+  height:65%;
+   width:27%; 
+  float:right;
+  margin-top:5%;
+  margin-left:3%;
+   background-color:#000;
+   border-radius: 5%;
 
+}
+.btn1{
+
+  border-radius: 10%;
+  background-color:#FF7200;
+  height:6%;
+   width:15%; 
+
+
+}
 
 
 </style>
@@ -102,7 +120,9 @@ border-color: #FF7200;
 </tr>
  
   </table>
+
 </div>
+
 
 <div style="height:60%; width:60%; float: left;">
 <p class="h1"> Web Design & Development  Course </p>
@@ -114,7 +134,9 @@ border-color: #FF7200;
 </div>
 <div style="height:60%; width:10%; float:right;"></div>
 
-<div style="height:60%; width:30%; float:right;">
+<div class="loginpage" >
+
+  <button class="btn1">Login Here</button>
 
 </div>
 
