--- a/index.html
+++ b/index.html
@@ -1,146 +1,58 @@
-<html >
+<!DOCTYPE html>
+<html>
 <head>
-
-<title > this is my first webpage </title>
-
-<style>
-#a {
-font-size: 20px;
-font-weight: bold;
-color:white;
-
-}
-
-
-.srch{
-height:53%;
-width: 60%;
-background: transparent;
-border-color: #FF7200;
-border-radius: 5px;
-padding-left: 10%;
-}
-
-.btn{
-
-height:53%;
-width : 25%;
-color:white;
-font-size:15px;
-border-radius: 5px;
-background: #FF7200;
-border-color: #FF7200;
-
-}
-.btn:hover{
-    color: #000;
-}
-
-.btn:focus{
-    outline: none;
-}
-
-.srch:focus{
-    outline: none;
-}
-.h1 {
-font-size: 80px;
-color: #FF7200;
-padding-left: 5%;
-}
-.h2 {
-font-size: 21px;
-line-break: 3px;
-color: #ffffff;
-padding-left: 5%;
-}
-
-.btn2{
-
-height:10%;
-width : 25%;
-color:white;
-font-size:18px;
-margin-left: 5%;
-border-radius: 5px;
-background: #FF7200;
-border-color: #FF7200;
-
-}
-.loginpage{
-  height:65%;
-   width:27%; 
-  float:right;
-  margin-top:5%;
-  margin-left:3%;
-   background-color:#000;
-   border-radius: 5%;
-
-}
-.btn1{
-
-  border-radius: 10%;
-  background-color:#FF7200;
-  height:6%;
-   width:15%; 
-
-
-}
-
-
-</style>
-
-<script> 
-
-
-
-</script> 
+   <title>my ausome food store</title>
+<link rel="stylesheet" href="./css/style.css"/>
 </head>
+<body>
+    <header class="topbar">
+        <div class="container">
 
-<body style="background-color: #7F7F7F;" >
-<div style="height:10%; width: 100%;">
-  <table style="height:100%; width: 100%;">
-<tr >
+            <div class="icons"> 
+                <a href="https://www.facebook.com/"><img src="./icons/facebook.svg"/></a>
+                <a href="https://www.facebook.com/"><img src="./icons/twitter.svg"/></a>
+                <a href="https://www.facebook.com/"><img src="./icons/google.svg"/></a>
+                <a href="https://www.facebook.com/"><img src="./icons/search.svg"/></a>
+                <a href="https://www.facebook.com/"><img src="./icons/instagram.svg"/></a>
+            </div>
 
-<td style=" font-weight: bold; height:100%; width: 20%; font-size: 40px; text-align: center; padding-bottom: 1%;color: #FF7200;">Praroz</td>
+            <div class="auth" >
 
-<td id="a" style="height:100%; width: 10%;">Home</td>
-<td id="a" style="height:100%; width: 10%;">About</td>
-<td id="a" style="height:100%; width: 10%;">Service</td>
-<td id="a" style="height:100%; width: 10%;">design</td>
-<td id="a" style="height:100%; width: 10%;">Contact</td>
+                <img src="./icons/user-icon.svg">
+                <a href="#">Log in</a>
+            <span>|</span>
+                <img src="./icons/edit.svg">
+                <a href="#">Resister</a>
+            <span>|</span>
+                <img src="./icons/cart.svg">
+                <a href="#">0 Item</a>
+            </div>
+        </div>
+    </header>
 
-<td style="height:100%; width: 30%;"> 
+    <nav class="container justifycontent">
 
-  <input class="srch" type="search"  placeholder="Type To text">
-  <a href="#">    <button class="btn">Search</button>    </a>
+<div class="center flex">  
+     <img src="./icons/phone.svg">
+     <div style="line-height:-0em; margin-left:5px;">
+          <h6>call us 01881559799</h6>
+          <h6>email:mdak2018@gmail.com</h6> 
+     </div> 
+</div>
+  
+<div class="center flex">  
+    <img src="./icons/phone.svg">
+    <h6>call us 01881559799</h6> 
+</div>
 
-</td>
-
-</tr>
- 
-  </table>
-
+<div class="center flex">  
+    <img src="./icons/phone.svg">
+    <h6>call us 01881559799</h6> 
 </div>
 
 
-<div style="height:60%; width:60%; float: left;">
-<p class="h1"> Web Design & Development  Course </p>
-<p class="h2"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt neque expedita atque eveniet
-  quis nesciunt. Quos nulla vero consequuntur, fugit nemo ad delectus
-  a quae totam ipsa illum minus laudantium? </p>
-  <button class="btn2">Join Us</button>
-
-</div>
-<div style="height:60%; width:10%; float:right;"></div>
-
-<div class="loginpage" >
-
-  <button class="btn1">Login Here</button>
-
-</div>
+</nav>
 
 
 </body>
-
 </html>
