--- a/index.html
+++ b/index.html
@@ -53,6 +53,17 @@
 
 </nav>
 
+<div class="justifycenter container" >
+
+    <a href="#" class="active">home</a>
+    <a href="#" class="j">service</a>
+    <a href="#" class="j">address</a>
+    <a href="#" class="j">contact</a>
+    <a href="#" class="j">more</a>
+    <a href="#" class="j">help</a>
+
+</div>
+
 
 </body>
 </html>
