--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="./css/style.css"/>
 </head>
 <body>
-    <header class="topbar">
+    <header class="topbar" style="  background-color: #2a3963;">
         <div class="container">
 
             <div class="icons"> 
