--- a/index.html
+++ b/index.html
@@ -1,68 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-   <title>my ausome food store</title>
-<link rel="stylesheet" href="./css/style.css"/>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<!-- <link rel="stylesheet" type="text/css" href="index.css"> -->
+
+	<title></title>
+<script type="text/javascript">
+	if (window.innerWidth*window.devicePixelRatio <= 1024 && window.innerHeight*window.devicePixelRatio <= 768-138 ) { 
+		document.head.insertAdjacentHTML( 'beforeend', '<link rel=stylesheet href=/css/index.css>' );   }
+</script>
+
 </head>
-<body>
-    <header class="topbar" style="  background-color: #2a3963;">
-        <div class="container">
-
-            <div class="icons"> 
-                <a href="https://www.facebook.com/"><img src="./icons/facebook.svg"/></a>
-                <a href="https://www.facebook.com/"><img src="./icons/twitter.svg"/></a>
-                <a href="https://www.facebook.com/"><img src="./icons/google.svg"/></a>
-                <a href="https://www.facebook.com/"><img src="./icons/search.svg"/></a>
-                <a href="https://www.facebook.com/"><img src="./icons/instagram.svg"/></a>
-            </div>
-
-            <div class="auth" >
-
-                <img src="./icons/user-icon.svg">
-                <a href="#">Log in</a>
-            <span>|</span>
-                <img src="./icons/edit.svg">
-                <a href="#">Resister</a>
-            <span>|</span>
-                <img src="./icons/cart.svg">
-                <a href="#">0 Item</a>
-            </div>
-        </div>
-    </header>
-
-    <nav class="container justifycontent">
-
-<div class="center flex">  
-     <img src="./icons/phone.svg">
-     <div style="line-height:-0em; margin-left:5px;">
-          <h6>call us 01881559799</h6>
-          <h6>email:mdak2018@gmail.com</h6> 
-     </div> 
-</div>
-  
-<div class="center flex">  
-    <img src="./icons/phone.svg">
-    <h6>call us 01881559799</h6> 
-</div>
-
-<div class="center flex">  
-    <img src="./icons/phone.svg">
-    <h6>call us 01881559799</h6> 
-</div>
-
-
-</nav>
-
-<div class="justifycenter container" >
-
-    <a href="#" class="active">home</a>
-    <a href="#" class="j">service</a>
-    <a href="#" class="j">address</a>
-    <a href="#" class="j">contact</a>
-    <a href="#" class="j">more</a>
-    <a href="#" class="j">help</a>
-
-</div>
+<body class="f">
 
 
 </body>
