--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 	<title></title>
 <script type="text/javascript">
 	if (window.innerWidth*window.devicePixelRatio <= 1024 && window.innerHeight*window.devicePixelRatio <= 768-138 ) { 
-		document.head.insertAdjacentHTML( 'beforeend', '<link rel=stylesheet href=/css/pc.css>' );   }
-	document.head.insertAdjacentHTML( 'beforeend', '<link rel=stylesheet href=/css/pc.css>' ); 
+		document.head.insertAdjacentHTML( 'beforeend', '<link rel=stylesheet href=pc.css>' );   }
 </script>
 
 </head>
