--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 	<title></title>
 <script type="text/javascript">
-	if (window.innerWidth*window.devicePixelRatio <= 1024 && window.innerHeight*window.devicePixelRatio <= 768 ) { 
+	if (window.innerWidth*window.devicePixelRatio <= 1024 ) { 
 		document.head.insertAdjacentHTML( 'beforeend', '<link rel=stylesheet href=/css/pc.css>' );   }
 	
 </script>
