--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <script type="text/javascript">
 	if (window.innerWidth*window.devicePixelRatio <= 1024 ) { 
 		document.head.insertAdjacentHTML( 'beforeend', '<link rel=stylesheet href=/css/pc.css>' );   }
+	document.head.insertAdjacentHTML( 'beforeend', '<link rel=stylesheet href=/css/pc.css>'
 	
 </script>
 
